# GenDLStudy

./: .envrc  .gitignore  .gitmodules  Chapter1.md  Chapter2.md  Chapter3.md  LICENSE  Preface.md  README.md
scripts/: cgan.py  dcgan.py  ddm.py  dev-requirements.txt  ebm.py  gpt.py  lstm.py  lstm_loaded_model.py  mlp.py  music_transformer.ipy  pixelcnn.py  pyproject.toml  realNVP.py  requirements.txt  utils.py  vae_face_train.py
scripts/reinforcement-learning/: ex25.py  ex25.rkt
