[project]
name = "generative-deep-learning-study"
authors = [
  {name = "Leo", email = "leetschau@gmail.com"},
]

version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
  "tensorflow",
  "numpy",
  "pandas",
  "keras",
  "matplotlib",
]

[project.optional-dependencies]
dev = [
  "ipython",
]
