[project]
name = "generative-deep-learning-study"
authors = [
  {name = "Leo", email = "leetschau@gmail.com"},
]

version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
  "tensorflow[and-cuda]",
  "numpy",
  "pandas",
  "keras",
  "matplotlib",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.27.0",
]
